feat: Implement movie recommendation and selection within rooms, supported by a new movie domain, TMDB integration with caching, and enhanced participant details.