@@ -29,8 +29,9 @@ public class ChatService {
         String suggestedTitle;
         try {
             suggestedTitle = geminiService.recommendForIndividual(request.descricao());
-        } catch (RuntimeException _) {
-            throw new BusinessException("Serviço de recomendação indisponível no momento", HttpStatus.SERVICE_UNAVAILABLE);
+        } catch (Exception ignored) {
+            throw new BusinessException("Serviço de recomendação indisponível no momento",
+                    HttpStatus.SERVICE_UNAVAILABLE);
         }
 
         if (suggestedTitle.isBlank()) {
@@ -43,6 +44,6 @@ public class ChatService {
             throw new BusinessException("Filme sugerido não encontrado na base de dados", HttpStatus.NOT_FOUND);
         }
 
-        return new ChatResponse(MovieResponse.from(results.getFirst()));
+        return new ChatResponse(MovieResponse.from(results.get(0)));
     }
 }
